design check booking status in useDashboard.html file in SpringFrontEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/assests/style.css
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/assests/style.css
@@ -8,6 +8,8 @@ body {
     font-family: 'Ubuntu', sans-serif;
 }
 
+/*----------------user home page--------------------------*/
+
 .myf{
     --bs-offcanvas-width: 650px;
     background-color:  white;
@@ -73,3 +75,5 @@ body {
     font-weight: 300;
     font-size: 0.75em;
 }
+
+/*------------------------------------------*/
