car htim pages to useDashboard.html file in SpringFrontEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/assests/style.css
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/assests/style.css
@@ -32,8 +32,7 @@ body {
     justify-content: center;
     align-items: center;
 }
-#row .box img {
-    position: absolute;
+#row .box a img {
     width: 435px;
     height: 320px;
     z-index: 3;
