--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/assests/style.css
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/assests/style.css
@@ -1,8 +1,8 @@
 
-body {
-    height: 100vh;
-    width: 100vw;
-}
+/*body {*/
+/*    height: 100vh;*/
+/*    width: 100vw;*/
+/*}*/
 
 *{
     font-family: 'Ubuntu', sans-serif;
