genarate directories to add car images in assests in useDashboard.html file in SpringFrontEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/assests/style.css
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/assests/style.css
@@ -8,6 +8,15 @@
     font-family: 'Ubuntu', sans-serif;
 }
 
+::-webkit-scrollbar{
+    width: 8px;
+    background: rgba(63, 56, 56, 0.56);
+}
+
+::-webkit-scrollbar-thumb{
+    background: black;
+}
+
 /*----------------user home page--------------------------*/
 
 .myf{
