--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/assests/css/bootstrap.css
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/assests/css/bootstrap.css
@@ -3712,7 +3712,7 @@ textarea.form-control-lg {
 
 .nav-pills {
   --bs-nav-pills-border-radius: 0.375rem;
-  --bs-nav-pills-link-active-color: #fff;
+  --bs-nav-pills-link-active-color: #000000;
   --bs-nav-pills-link-active-bg: #0d6efd;
 }
 .nav-pills .nav-link {
